<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stream"
    android:background="@color/colorPrimary">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/surfView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-195dp"
        android:visibility="invisible"
        android:id="@+id/buffer"/>

    <LinearLayout android:layout_height="200dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_marginTop="150dp">
        <LinearLayout android:layout_height="match_parent"
            android:layout_width="130dp"
            android:orientation="vertical">
            <ImageView
                android:layout_height="160dp"
                android:layout_width="130dp"
                android:id="@+id/pstr"
                android:background="#000000"/>
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/title"
                android:id="@+id/ttl"
                style="@style/title"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="description : "
            style="@style/title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mv_info"
            style="@style/textview"/>
        </LinearLayout>

    </LinearLayout>


        <Button
            style="@style/buttons"
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_marginTop="10dp"/>

        <Button
            style="@style/buttons"
            android:id="@+id/accept"
            android:text="@string/accept"
            android:layout_marginTop="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:id="@+id/bar"/>
</LinearLayout>

</ScrollView>